[tool.poetry]
name = "obsidiantools"
version = "0.10.0" 
description = "Obsidian Tools - a Python interface for Obsidian.md vaults"
authors = ["Mark Farragher"] 
readme = "README.md"
license = "BSD"
repository = "https://github.com/mfarragher/obsidiantools"
homepage = "https://github.com/mfarragher/obsidiantools"
keywords = ["obsidian", "obsidian.md", "knowledge", "note-taking", "notes", "knowledge management", "connected notes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
    "Topic :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10" 
markdown = "^3.7"
pymdown-extensions = "^10.14.3"
html2text = "^2024.2.26"
pandas = "^2.2.3"
numpy = "^2.2.3"
networkx = "^3.4.2"
python-frontmatter = "^1.1.0"
beautifulsoup4 = "^4.13.3"
bleach = "^6.2.0"
lxml = "^5.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
coverage = "^7.6.12"
codecov = "^2.1.13"
tox = "^4.24.1"
twine = "^6.1.0"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"